--- a/apps/recommend/templates/recommend/recommend.html
+++ b/apps/recommend/templates/recommend/recommend.html
@@ -4,13 +4,20 @@
 <div id="recommendations">
     {% for choice in collection.choice_set.all|dictsort:"key" %}
     <div class="choice {% if recommended_choice == choice %}recommended{% endif %}">
-        <p><strong>
-            {{ choice.name }}
-            {% if recommended_choice == choice.key %}
-                (Recommended for you based on your Learner Profile)
-            {% endif %}
-        </strong></p>
-        <p>{{ choice.description }}</p>
+        {% if recommended_choice == choice %}
+        <p style="text-align: center;"><em>Recommended for you based on your Learner Profile:</em></p>
+        {% endif %}
+        <table style="width: 100%; border: none; padding: 0;" cellpadding="0" cellspacing="0" border="0">
+            <tbody>
+                <tr style="border: none;">
+                    <td rowspan="2" style="border: none; width: 20%; text-align: center;"><img src="{{ choice.image_url }}" alt="" width="100%" height="auto" /></td>
+                    <td style="border: none;"><strong>{{ choice.name }}</strong></td>
+                </tr>
+                <tr style="border: none;">
+                    <td style="border: none;">{{ choice.description }}</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
     {% endfor %}
 </div>
