--- a/apps/recommend/static/recommend/css/recommend.css
+++ b/apps/recommend/static/recommend/css/recommend.css
@@ -1,7 +1,8 @@
 /* recommendation interface css */
 
-div.recommended {
-    background-color: #fcd08b;
+div {
+    font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 16px;
 }
 
 div.choice {
@@ -14,12 +15,28 @@ div.choice table {
     width: 100%;
     border: none;
     padding: 0;
-    cellpadding: 0;
-    cellspacing: 0;
-    border: 0;
 }
 
-div.choice tr {
+table.choice {
+    width: 100%;
+    border: none;
+    padding: 0;
+}
+
+table.choice tr td {
     border: none;
 }
 
+div.choice td.icon {
+    width: 20%;
+    text-align: center;
+    padding: 15px;
+}
+
+div.recommended {
+    background-color: #fcd08b;
+}
+
+div.recommended p.message{
+    text-align: center;
+}
